# cve_2022_21882-cve_2021_1732

./: Cargo.toml  README.md
cve_2022_21882/: Cargo.toml  build.rs
cve_2022_21882/src/: lib.rs  main.rs  patchcallbacktable.rs
cve_2022_21882/static/: ntusermsgcall.lib
src/: main.rs
